Squashed commit of the following:
commit 42efbaeacae0bb323cf7e7b585b34082911da60f
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 17:10:44 2025 +0100

    MFLP-103 element-list is saved

commit 2e357f20e100cd60f320d96941e72b6b1c3cc8de
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 16:33:58 2025 +0100

    MFLP-103 tidy up

commit 9d30af7fab0e3b90d16a54750ac0fa1ef7e5b693
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 16:03:14 2025 +0100

    MFLP-103 External URLs

commit 932c2e2a39a3e1a3dfb4bbac2fea118974abe704
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 14:18:05 2025 +0100

    MFLP-103 Refactor

commit dca692d7f5882f56025add1a0507ba9358a5641f
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 13:14:28 2025 +0100

    MFLP-103 Link to class in other module works

commit 9da364460d726aadeaa1b409688f0085a2f10c78
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 11:50:05 2025 +0100

    MFLP-103 reading elements list file

commit cd4073ca9743ea594f43597f2617118362c71cf3
Author: Sandy Dunlop <sandy.dunlop@gmail.com>
Date:   Fri Sep 5 00:06:28 2025 +0100

    MFLP-103 - re-arranging things